deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud
  template:
    metadata:
      labels:
        app: crud
    spec:
      containers:
        - name: crud-container
          image: springboot-crud:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
