service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  type: ClusterIP
  selector:
    app: crud
  ports:
    - port: 80
      targetPort: 8080
